04 March 2007

* Bug fix: fill in the correct size for maildir fetched mail rather than using
  the rounded-up size and adding a ton of nulls.
* -D on the command line overrides macro definitions in the configuration file.
* Build the attachment list when the first attachment match rule is found rather
  than for every mail regardless.

03 March 2007

* add-header action and lines, body_lines, header_lines tags for IMAP/POP3,
  suggested by Frank Terbeck.
* Linux dirname(3)/basename(3) screws up the buffer. Fixed it thanks to Frank
  Terbeck.
* Fixed bugs in string parsing thanks to Frank Terbeck.

02 March 2007

* Made add_tag use varargs and added a server_uid tag to POP3/IMAP messages.
* Added infrastructure to maintain a cache of variable-length strings within a
  single contiguous block of data (cache.c), so it can be passed easily up
  to the parent process. Use this for storing mail tags to get rid of the
  arbitrary tag length limits.

28 February 2007

* Man page cleanups, from Tamas TEVESZ.

27 February 2007

* fdm 1.0 released.

22 February 2007

* Fixed silly typo in NNTP code check. SF bug 1650701.
* Included account name in received header.
* Added stdout delivery.
* New append-string delivery to add data to a mail.

19 February 2007

* Added a remove-header action to remove all instances of a header. Based on a
  a request by Tobias Ulmer.

09 February 2007

* Reworked the substitution stuff. Each mail now carries a list of tag name,
  value pairs, some of which are autogenerated (account, action, etc) and others
  which may be added by the user. They may be inserted in strings using %[name].
  The autogenerated tags are aliased to the old single letter tokens. Based on
  a question from AJ Weber.
* Added a timeout option to limit the time for which servers are waited.

08 February 2007

* Added file-umask and file-group options to control permissions and group
  ownership of created mboxes and maildirs. Altered the permissions checks