@@ -1,4 +1,4 @@
-/* $Id: child.c,v 1.113 2007-03-04 18:09:55 nicm Exp $ */
+/* $Id: child.c,v 1.114 2007-03-04 18:12:48 nicm Exp $ */
 
 /*
  * Copyright (c) 2006 Nicholas Marriott <nicm@users.sourceforge.net>
@@ -278,8 +278,9 @@ fetch_account(struct io *io, struct account *a, double tim)
 		if (hdr == NULL || len == 0 || len > INT_MAX)
 			log_debug("%s: message-id not found", a->name);
 		else {
-			log_debug("%s: message-id is: %.*s", a->name, (int) len,
-			    hdr);
+			log_debug("%s: message-id is: %.*s", a->name, 
+			    (int) len, hdr);
+			add_tag(&m.tags, "message_id", "%.*s", (int) len, hdr);
 		}
 
 		/*
