@@ -5,6 +5,7 @@
 * -D on the command line overrides macro definitions in the configuration file.
 * Build the attachment list when the first attachment match rule is found rather
   than for every mail regardless.
+* Add a message_id tag to each mail.
 
 03 March 2007
 
@@ -89,4 +90,4 @@
   the mail was very rarely reallocated, now that the header is added it is.
 * Changed all the descriptions to static buffers and audited use of snprintf.
 
-$Id: CHANGES,v 1.25 2007-03-04 18:09:55 nicm Exp $
+$Id: CHANGES,v 1.26 2007-03-04 18:12:48 nicm Exp $
